--- a/src/main/resources/templates/edit_beneficiary.html
+++ b/src/main/resources/templates/edit_beneficiary.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
@@ -56,23 +55,13 @@
                           BENEFICIARIO
                       </a> -->
 
-                    <form th:action="@{/donor/update/form}" method="POST" class="border p-3 form"
+                    <form th:action="@{/beneficiary/update/form}" method="POST" class="border p-3 form"
                           enctype="multipart/form-data" >
 
                         <div class="form-group" id="formComplete">
                             <h3 class="titRegistrer"> Ingrese sus datos nuevos </h1>
+                            
 
-                                <div class="form-group my-3">
-                                    <label for="text" class="labelForm">Nombre completo</label>
-                                    <input type="text" class="form-control" name="name" placeholder="Nombre completo"
-                                           th:value="${name}">
-
-                                    <div class="form-group my-3">
-                                        <label for="text" class="labelForm">Tipo de Donador</label>
-                                        <input type="donor_type" class="form-control" name="donor_type" placeholder="donor_type" th:value="${donor_type}">
-                                    </div>
-
-                                </div>
                                 <div class="form-group my-3">
                                     <label for="text">Email</label>
                                     <input type="email" class="form-control" name="email" placeholder="Email"
@@ -80,6 +69,17 @@
                                 </div>
 
 
+                                <div class="form-group my-3">
+                                    <label for="text">Nombre de institución</label>
+                                    <input type="text" class="form-control" name="name" placeholder="Nombre"
+                                           th:value="${name}">
+                                </div>
+
+                                <div class="form-group my-3">
+                                    <label for="text">Tipo de institución</label>
+                                    <input type="text" class="form-control" name="institution_type"
+                                           placeholder="Nombre de la institución" th:value="${institution_type}">
+                                </div>
 
                                 <div class="form-group my-3">
                                     <label for="text">Contraseña</label>
@@ -87,11 +87,83 @@
                                            th:value="${password}">
                                 </div>
 
+
+                                <p>¿Que tipo de ayuda necesita?</p>
+
+
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="voluntary" value="1" id="voluntary">
+                                    <input class="form-check-input" type="checkbox" name="voluntary" value="1"
+                                           id="voluntary">
                                     <label class="form-check-label" for="voluntary">
-                                        Quiere recibir notificaciones acerca de trabajo voluntario?
-                                    </label>                           
+                                        Voluntarios
+                                    </label>
+                                </div>
+
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="toys" value="1" id="toys">
+                                    <label class="form-check-label" for="toys">
+                                        Juguetes
+                                    </label>
+                                </div>
+
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="clothing" value="1" id="clothing">
+                                    <label class="form-check-label" for="clothing">
+                                        Prendas de vestir
+                                    </label>
+                                </div>
+
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="food" value="1" id="food">
+                                    <label class="form-check-label" for="food">
+                                        Alimentos
+                                    </label>
+                                </div>
+
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="monetary_aid" value="1"
+                                           id="monetary_aid">
+                                    <label class="form-check-label" for="monetary_aid">
+                                        Ayuda aconomica
+                                    </label>
+                                </div>
+
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="school_supplies" value="1"
+                                           id="school_supplies">
+                                    <label class="form-check-label" for="school_supplies">
+                                        Útiles escolares
+                                    </label>
+                                </div>
+
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="books" value="1" id="books">
+                                    <label class="form-check-label" for="books">
+                                        Libros
+                                    </label>
+                                </div>
+
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="medical_supplies" value="1"
+                                           id="medical_supplies">
+                                    <label class="form-check-label" for="medical_supplies">
+                                        Medicamentos
+                                    </label>
+                                </div>
+
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="furnitures" value="1"
+                                           id="furnitures">
+                                    <label class="form-check-label" for="furnitures">
+                                        Muebles
+                                    </label>
+                                </div>
+
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="legacies" value="1" id="legacies">
+                                    <label class="form-check-label" for="legacies">
+                                        Legado
+                                    </label>
                                 </div>
 
 
